# libreotp

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac
LibreOTP.xcodeproj/: project.pbxproj
LibreOTP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-aux/: .gitignore  git-tar-name.txt
docs/: port-seq-enc.sh  port-seq.sh  secret.txt
include/: libreotp.h  libreotp_cdefs.h
lib/libibreotp/: encodings.c  encodings.h  encodings_base32.c  encodings_base32.h  libibreotp.h  libibreotp.sym  version.c  version.h
m4/: .gitignore
